--- a/publication/park-pki/index.html
+++ b/publication/park-pki/index.html
@@ -656,7 +656,7 @@
     
 
   
-  <span ><a href="/author/shinjo-park/">Shinjo Park</a></span>, <span ><a href="/author/suwan-park/">Suwan Park</a></span>, <span ><a href="/author/insu-yun/">Insu Yun</a></span>, <span ><a href="/author/dongkwan-kim/">Dongkwan Kim</a></span>, <span ><a href="/author/yongdae-kim/">Yongdae Kim</a></span>
+  <span ><a href="/author/shinjo-park/">Shinjo Park</a></span>, <span ><a href="/author/suwan-park/">Suwan Park</a></span>, <span ><a href="/author/insu-yun/">Insu Yun</a></span>, <span ><a href="/author/dongkwan-kim/">Dongkwan Kim*</a></span>, <span ><a href="/author/yongdae-kim/">Yongdae Kim</a></span>
   </div>
   
   
